--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -1,11 +1,12 @@
 .search-container {
+	box-shadow: 2px 2px 10px #e8e4e1;
 	max-width: 600px;
 	margin: auto;
+	background-color: #bfbebc !important;
 }
 
-.search-bar {
-	background-color: #e8e4e1;
-	box-shadow: 2px 2px 10px #e8e4e1;
+.search-card-title {
+	font-size: 20pt !important;
 }
 
 @media only screen and (max-width: 600px) {
